// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Shellbar /> create shellbar 1`] = `
<div
  className="fd-shellbar"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--start"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fiori-fundamentals/dist/images/sap-logo.png"
      />
    </a>
    <div
      className="fd-shellbar__product"
    >
      <span
        className="fd-shellbar__title"
      >
        Corporate Portal
      </span>
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--end"
  >
    <div
      className="fd-shellbar__actions"
    >
      <div
        className="fd-shellbar__action fd-shellbar__action--show-always"
      >
        <div
          className="fd-user-menu"
        >
          <div
            className="fd-popover fd-popover--right"
          >
            <div
              aria-expanded={false}
              className="fd-popover__control"
              onClick={[Function]}
            >
              <span
                className="fd-identifier--xs fd-identifier--circle fd-has-background-color-accent-8"
                role=""
              >
                JS
              </span>
            </div>
            <div
              aria-hidden={true}
              className="fd-popover__body fd-popover__body--right"
            >
              <nav
                className="fd-menu"
              >
                <ul
                  className="fd-menu__list"
                >
                  <li>
                    <a
                      className="fd-menu__item"
                    >
                      John Snow
                    </a>
                  </li>
                  <li>
                    <a
                      className="fd-menu__item"
                      onClick={[Function]}
                    >
                      <span
                        className="sap-icon--action-settings sap-icon--s"
                        onClick={[Function]}
                      />
                         
                      Settings
                    </a>
                  </li>
                  <li>
                    <a
                      className="fd-menu__item"
                      onClick={[Function]}
                    >
                      <span
                        className="sap-icon--log sap-icon--s"
                        onClick={[Function]}
                      />
                         
                      Sign Out
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Shellbar /> create shellbar 2`] = `
<div
  className="fd-shellbar blue"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--start"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fiori-fundamentals/dist/images/sap-logo.png"
      />
    </a>
    <div
      className="fd-shellbar__product"
    >
      <span
        className="fd-shellbar__title"
      >
        Corporate Portal
      </span>
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--end"
  >
    <div
      className="fd-shellbar__actions"
    >
      <div
        className="fd-shellbar__action fd-shellbar__action--show-always"
      >
        <div
          className="fd-user-menu"
        >
          <div
            className="fd-popover fd-popover--right"
          >
            <div
              aria-expanded={false}
              className="fd-popover__control"
              onClick={[Function]}
            >
              <span
                className="fd-identifier--xs fd-identifier--circle fd-has-background-color-accent-8"
                role=""
              >
                JS
              </span>
            </div>
            <div
              aria-hidden={true}
              className="fd-popover__body fd-popover__body--right"
            >
              <nav
                className="fd-menu"
              >
                <ul
                  className="fd-menu__list"
                >
                  <li>
                    <a
                      className="fd-menu__item"
                    >
                      John Snow
                    </a>
                  </li>
                  <li>
                    <a
                      className="fd-menu__item"
                      onClick={[Function]}
                    >
                      <span
                        className="sap-icon--action-settings sap-icon--s"
                        onClick={[Function]}
                      />
                         
                      Settings
                    </a>
                  </li>
                  <li>
                    <a
                      className="fd-menu__item"
                      onClick={[Function]}
                    >
                      <span
                        className="sap-icon--log sap-icon--s"
                        onClick={[Function]}
                      />
                         
                      Sign Out
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Shellbar /> create shellbar 3`] = `
<div
  className="fd-shellbar"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--start"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fiori-fundamentals/dist/images/sap-logo.png"
      />
    </a>
    <div
      className="fd-shellbar__product"
    >
      <div
        className="fd-product-menu"
      >
        <div
          className="fd-popover fd-popover--right"
        >
          <div
            aria-expanded={false}
            className="fd-popover__control"
            onClick={[Function]}
          >
            <button
              className="fd-product-menu__control"
            >
              <span
                className="fd-shellbar__title fd-product-menu__title"
              >
                Corporate Portal
              </span>
            </button>
          </div>
          <div
            aria-hidden={true}
            className="fd-popover__body fd-popover__body--right"
          >
            <nav
              className="fd-menu"
            >
              <ul
                className="fd-menu__list"
              >
                <li>
                  <a
                    className="fd-menu__item"
                    onClick={[Function]}
                  >
                    Application A
                  </a>
                </li>
                <li>
                  <a
                    className="fd-menu__item"
                    onClick={[Function]}
                  >
                    Application B
                  </a>
                </li>
                <li>
                  <a
                    className="fd-menu__item"
                    onClick={[Function]}
                  >
                    Application C
                  </a>
                </li>
                <li>
                  <a
                    className="fd-menu__item"
                    onClick={[Function]}
                  >
                    Application D
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--middle"
  >
    <img
      alt="CoPilot"
      height="30"
      src="//unpkg.com/fiori-fundamentals/dist/images/copilot.png"
      width="30"
    />
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--end"
  >
    <div
      className="fd-shellbar__actions"
    >
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-search-input fd-search-input--closed"
        >
          <div
            className="fd-popover"
          >
            <div
              className="fd-popover__control fd-search-input__control"
            >
              <button
                aria-expanded={false}
                aria-haspopup="true"
                className="sap-icon--search fd-button--shell"
                onClick={[Function]}
              />
              <div
                aria-hidden={true}
                className="fd-search-input__closedcontrol"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="true"
                  className="fd-search-input__controlinput"
                >
                  <input
                    className="fd-input"
                    onChange={[Function]}
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    placeholder="Enter a fruit"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-popover fd-popover--right"
        >
          <div
            aria-expanded={false}
            className="fd-popover__control"
            onClick={[Function]}
          >
            <button
              aria-label="Settings"
              className=" fd-button--shell sap-icon--settings"
            >
              <span
                aria-label="Unread count"
                className="fd-counter fd-counter--notification"
              >
                5
              </span>
            </button>
          </div>
          <div
            aria-hidden={true}
            className="fd-popover__body fd-popover__body--right"
          >
            <nav
              className="fd-menu"
            >
              <ul
                className="fd-menu__list"
              >
                <li>
                  <a
                    className="fd-menu__item"
                    href="/"
                  >
                    Option 1
                  </a>
                </li>
                <li>
                  <a
                    className="fd-menu__item"
                    href="/"
                  >
                    Option 2
                  </a>
                </li>
                <li>
                  <a
                    className="fd-menu__item"
                    href="/"
                  >
                    Option 3
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
      <div
        className="fd-popover fd-popover--right"
      >
        <div
          aria-expanded={false}
          className="fd-popover__control"
          onClick={[Function]}
        >
          <div
            className="fd-shellbar__action fd-shellbar__action--collapsible"
          >
            <button
              aria-label="Notifications"
              className=" fd-button--shell sap-icon--bell"
            >
              <span
                aria-label="Unread count"
                className="fd-counter fd-counter--notification"
              >
                2
              </span>
            </button>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="fd-popover__body fd-popover__body--right"
        >
          <nav
            className="fd-menu"
          >
            <ul
              className="fd-menu__list"
            >
              <li>
                <a
                  className="fd-menu__item"
                  href="/"
                >
                  Notification 1
                </a>
              </li>
              <li>
                <a
                  className="fd-menu__item"
                  href="/"
                >
                  Notification 2
                </a>
              </li>
              <li>
                <a
                  className="fd-menu__item"
                  href="/"
                >
                  Notification 3
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapse"
      >
        <div
          className="fd-shellbar-collapse"
        >
          <div
            className="fd-popover fd-popover--right"
          >
            <div
              aria-expanded={false}
              className="fd-popover__control"
              onClick={[Function]}
            >
              <div
                className="fd-shellbar-collapse--control"
                role="button"
              >
                <button
                  className=" fd-button--shell sap-icon--overflow"
                >
                  <span
                    aria-label="Unread count"
                    className="fd-counter fd-counter--notification"
                  >
                     
                    7
                     
                  </span>
                </button>
              </div>
            </div>
            <div
              aria-hidden={true}
              className="fd-popover__body fd-popover__body--right"
            >
              <nav
                className="fd-menu"
              >
                <ul
                  className="fd-menu__list"
                >
                  <li>
                    <a
                      className="fd-menu__item"
                      onClick={[Function]}
                    >
                      <span
                        className="sap-icon--search"
                        onClick={[Function]}
                      />
                       
                      Search
                    </a>
                  </li>
                  <li>
                    <a
                      className="fd-menu__item"
                      onClick={[Function]}
                    >
                      <span
                        className="sap-icon--settings"
                        onClick={[Function]}
                      >
                        <span
                          aria-label="Unread count"
                          className="fd-counter fd-counter--notification"
                        >
                          5
                        </span>
                      </span>
                       
                      Settings
                    </a>
                  </li>
                  <li>
                    <a
                      className="fd-menu__item"
                      onClick={[Function]}
                    >
                      <span
                        className="sap-icon--bell"
                        onClick={[Function]}
                      >
                        <span
                          aria-label="Unread count"
                          className="fd-counter fd-counter--notification"
                        >
                          2
                        </span>
                      </span>
                       
                      Notifications
                    </a>
                  </li>
                  <li>
                    <a
                      className="fd-menu__item"
                      onClick={[Function]}
                    >
                      <span
                        className="sap-icon--grid"
                        onClick={[Function]}
                      />
                       
                      Product Switcher
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--show-always"
      >
        <div
          className="fd-user-menu"
        >
          <div
            className="fd-popover fd-popover--right"
          >
            <div
              aria-expanded={false}
              className="fd-popover__control"
              onClick={[Function]}
            >
              <span
                className="fd-identifier--xs fd-identifier--circle fd-has-background-color-accent-8"
                role=""
              >
                JS
              </span>
            </div>
            <div
              aria-hidden={true}
              className="fd-popover__body fd-popover__body--right"
            >
              <nav
                className="fd-menu"
              >
                <ul
                  className="fd-menu__list"
                >
                  <li>
                    <a
                      className="fd-menu__item"
                    >
                      John Snow
                    </a>
                  </li>
                  <li>
                    <a
                      className="fd-menu__item"
                      onClick={[Function]}
                    >
                      <span
                        className="sap-icon--action-settings sap-icon--s"
                        onClick={[Function]}
                      />
                         
                      Settings
                    </a>
                  </li>
                  <li>
                    <a
                      className="fd-menu__item"
                      onClick={[Function]}
                    >
                      <span
                        className="sap-icon--log sap-icon--s"
                        onClick={[Function]}
                      />
                         
                      Sign Out
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-product-switcher"
        >
          <div
            className="fd-popover fd-popover--right"
          >
            <div
              aria-expanded={false}
              className="fd-popover__control"
              onClick={[Function]}
            >
              <button
                className=" fd-button--shell sap-icon--grid"
              />
            </div>
            <div
              aria-hidden={true}
              className="fd-popover__body fd-popover__body--right"
            >
              <div
                className="fd-product-switcher__body"
              >
                <nav>
                  <ul>
                    <li
                      onClick={[Function]}
                    >
                      <span
                        className="fd-product-switcher__product-icon"
                      >
                        <img
                          alt="Fiori Home"
                        />
                      </span>
                      <span
                        className="fd-product-switcher__product-title"
                      >
                        Fiori Home
                      </span>
                    </li>
                    <li
                      onClick={[Function]}
                    >
                      <span
                        className="fd-product-switcher__product-icon"
                      >
                        <img
                          alt="S/4 HANA Cloud"
                        />
                      </span>
                      <span
                        className="fd-product-switcher__product-title"
                      >
                        S/4 HANA Cloud
                      </span>
                    </li>
                  </ul>
                </nav>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
